# steam-analysis

./: .dockerignore  .env-copy  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_mongo.txt  Dockerfile_mongobackup.txt  Dockerfile_steam.txt  ReadMe.md  common.py  config.py  config_example.py  docker-compose-dev.yml  docker-compose.yml  download-appids.py  downloadappids.py  find-topics.py  identify-sys-requirements.py  mongobackup-crontab  opencriticgames.py  opencriticsearch.py  pyldavis.html  pyproject.toml  refresh-steam.py  refreshsteam.py  rsyncbackups.sh  run-backup.sh  run-schedule.py  runbackup.sh  spark-find-topics.py  steam-top-games.py  steam-users.py  steamreviews.py  steamtopgames.py  steamusers.py  twitchtopgames.py  update-price-history.py  updatepricehistory.py
.github/workflows/: buildimage.yml  codeql.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  mongodb-pvc.yaml  mongodb-service.yaml  mongodb.yaml  pvc.yaml
notebooks/: Basic_Analysis.ipynb  Price_Prediction.ipynb  RandomForest.ipynb  Spark-Find-Topics.ipynb  Storage_and_Status.ipynb
src/: common.py  downloadappids.py  isthereanydealhistory.py  isthereanydealsearch.py  opencriticgames.py  opencriticsearch.py  refreshsteam.py  run-schedule.py  steamreviews.py  steamtopgames.py  steamusers.py  twitchtopgames.py  updatepricehistory.py
