[project]
name = "steam-analysis"
version = "0.1.0"
description = "Steam analysis and video games"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "progressbar2>=4.5.0",
    "prophet>=1.3.0",
    "pymongo>=4.17.0",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "scikit-learn>=1.8.0",
]
